Start of articl

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,2 +1,2 @@
-h1 harp
-p testing
+h1 Tools shape the proces
+p But do they do so in a good way? In this article I will be looking at tools and how they shape your way of working and the result.
