--- a/_harp/main.less
+++ b/_harp/main.less
@@ -3,8 +3,9 @@ body{
   text-align: center;
   padding: 50px 20px 0;
   background: #f4f4f7;
-  color: #444;
-  margin: 0;
+  color: #333;
+  margin: 0 auto;
+  max-width: 60em;
 }
 
 h1{
@@ -12,6 +13,10 @@ h1{
   line-height: 1.2em;
   border-bottom: #CCC solid 1px;
   padding: 20px 0;
+}
+
+h2 {
+  
 }
 
 h3{
