--- a/_harp/main.less
+++ b/_harp/main.less
@@ -46,3 +46,15 @@ time span {
 .link {
   text-decoration: none;
 }
+
+.link-list {
+  padding-left: 0;
+  columns: 2;
+}
+.link-list__item {
+  list-style: none;
+  padding: 1em;
+}
+.link-list__link {
+  color: #666;
+}
